# SAPD-project-backend

./: .dockerignore  .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: auth.py  config.py  products.py  scorecards.py  supply_chain.py
app/core/: config.py  database.py  dependencies.py
app/core/patterns/: adapter_facade.py  builder.py  command.py  composite.py  decorator.py  observer.py  proxy_chain.py  state.py  strategy.py  visitor.py
app/data/: example_products.csv  mock_data.json
app/models/: db_models.py  schemas.py
scripts/: load_mock_data.py
tests/: conftest.py
tests/integration/: test_api_config.py  test_api_health.py  test_api_products.py
tests/unit/: test_adapter.py  test_composite.py  test_decorator.py  test_dependencies.py  test_observer.py  test_schemas.py  test_strategy.py  test_visitor.py
